corrected white space scss cards

--- a/src/style/MovieCards.scss
+++ b/src/style/MovieCards.scss
@@ -30,6 +30,7 @@
     .description{
         position: absolute;
         width: 100%;
+        white-space: normal;
         .stars{
             color: #ebcc34;
         }
